--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "class",
+  "name": "react-todo-list",
   "version": "1.0.0",
-  "description": "論壇實作",
+  "description": "A simple todo list app built with React, Redux and Webpack",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "API_HOST=http://localhost:3001  nodemon  src/server/index.js  --ignore src/containers --ignore src/components --ignore src/redux",
-    "dev": "node src/server/index.js",
-    "production_test": "NODE_ENV=production"
+    "serve": "nodemon src/server/index.js --ignore src/containers --ignore src/components --ignore src/redux  ",
+    "dev": "node src/server/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,50 +14,37 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.15.2",
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.1.0",
-    "babel-register": "^6.16.3",
-    "body-parser": "^1.15.2",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "^1.4.3",
-    "css-loader": "^0.26.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-react": "^6.4.1",
-    "express": "^4.13.4",
-    "express-session": "^1.14.2",
-    "imgur": "^0.2.0",
-    "jsonwebtoken": "^7.1.9",
-    "material-ui": "^0.16.1",
-    "mongodb": "^2.2.11",
-    "mongoose": "^4.6.7",
-    "mysql": "^2.12.0",
-    "nodemailer": "^2.6.4",
-    "prore": "^1.0.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.2",
-    "react-rte": "^0.11.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "redis": "^2.6.3",
-    "redux": "^3.4.0",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1",
-    "socket.io": "^1.5.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4"
+    "axios": "*",
+    "babel-core": "*",
+    "babel-eslint": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
+    "babel-preset-react-hmre": "*",
+    "babel-register": "*",
+    "body-parser": "*",
+    "connect-mongo": "*",
+    "cookie-parser": "*",
+    "express": "*",
+    "express-session": "*",
+    "material-ui": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "mysql": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "*",
+    "react-router": "*",
+    "react-router-redux": "*",
+    "react-tap-event-plugin": "*",
+    "redux": "*",
+    "redux-logger": "*",
+    "redux-thunk": "*",
+    "webpack": "*",
+    "webpack-dev-middleware": "*",
+    "webpack-hot-middleware": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "*"
   }
 }
