--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-todo-list",
+  "name": "class",
   "version": "1.0.0",
-  "description": "A simple todo list app built with React, Redux and Webpack",
+  "description": "class",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon src/server/index.js --ignore src/containers --ignore src/components --ignore src/redux  ",
+    "serve": "nodemon src/server/index.js --ignore src/containers --ignore src/components --ignore src/redux",
     "dev": "node src/server/index.js"
   },
   "repository": {
@@ -14,43 +14,45 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "*",
-    "babel-core": "*",
-    "babel-eslint": "*",
-    "babel-loader": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-react": "*",
-    "babel-preset-react-hmre": "*",
-    "babel-register": "*",
-    "body-parser": "*",
-    "connect-mongo": "*",
-    "cookie-parser": "*",
-    "express": "*",
-    "express-session": "*",
-    "material-ui": "*",
-    "mongodb": "*",
-    "mongoose": "*",
-    "mysql": "*",
-    "react": "*",
-    "react-dom": "*",
-    "react-redux": "*",
-    "react-router": "*",
-    "react-router-redux": "*",
-    "react-tap-event-plugin": "*",
-    "redux": "*",
-    "redux-logger": "*",
-    "redux-thunk": "*",
-    "webpack": "*",
-    "webpack-dev-middleware": "*",
-    "webpack-hot-middleware": "*",
-    "style-loader": "*",
-    "css-loader": "*",
-    "redis": "*",
-    "nodemailer": "*",
-    "jsonwebtoken": "*",
-    "socket.io": "*"
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
+    "axios": "1.3.5",
+    "body-parser": "1.20.2",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "history": "^5.3.0",
+    "jsonwebtoken": "9.0.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
+    "mysql": "2.18.1",
+    "nodemailer": "6.9.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.5",
+    "react-router": "6.10.0",
+    "react-router-dom": "^6.10.0",
+    "react-router-redux": "4.0.8",
+    "redis": "4.6.5",
+    "redux": "4.2.1",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.4.2",
+    "socket.io": "4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "babel-preset-stage-0": "*"
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.21.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.2",
+    "webpack-hot-middleware": "^2.25.3"
   }
 }
