--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.4.2",
     "socket.io": "4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
